--- a/Src/SimplestGitSourceGenerator/SimplestGitSourceGenerator.csproj
+++ b/Src/SimplestGitSourceGenerator/SimplestGitSourceGenerator.csproj
@@ -45,7 +45,7 @@
     
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="\" />
-        <None Include="build\SimplestGit.targets" Pack="true" PackagePath="build\" />
+        <None Include="build\SimplestGitSourceGenerator.targets" Pack="true" PackagePath="build\" />
     </ItemGroup>
 
 </Project>
