--- a/Samples/SimplestGitConsoleApp/SimplestGitConsoleApp.csproj
+++ b/Samples/SimplestGitConsoleApp/SimplestGitConsoleApp.csproj
@@ -9,7 +9,7 @@
         <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
-    <Import Project="..\..\Src\SimplestGitSourceGenerator\build\SimplestGitSourceGenerator.targets" />
+    <Import Project="..\..\Src\SimplestGitSourceGenerator\buildTransitive\SimplestGitSourceGenerator.targets" />
 
     <ItemGroup>
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
