--- a/Src/SimplestGitSourceGenerator/SimplestGitSourceGenerator.csproj
+++ b/Src/SimplestGitSourceGenerator/SimplestGitSourceGenerator.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <PackageId>SimplestGitSourceGenerator</PackageId>
         <Authors>BigBang1112</Authors>
-        <Version>1.0.1</Version>
+        <Version>1.0.2</Version>
         <Description>Simplest solution to get Git information in your .NET apps.</Description>
         <Copyright>Copyright (c) 2026 Petr Pivoňka</Copyright>
         <PackageProjectUrl>https://github.com/BigBang1112/simplest-git-source-generator</PackageProjectUrl>
@@ -46,7 +46,8 @@
 
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="\" />
-        <None Include="build\SimplestGitSourceGenerator.targets" Pack="true" PackagePath="build\" />
+        <None Include="buildTransitive\SimplestGitSourceGenerator.targets" Pack="true" PackagePath="buildTransitive\SimplestGitSourceGenerator.targets" />
+        <None Include="buildTransitive\SimplestGitSourceGenerator.targets" Pack="true" PackagePath="build\SimplestGitSourceGenerator.targets" />
     </ItemGroup>
 
 </Project>
