--- a/Samples/SimplestGitConsoleApp/SimplestGitConsoleApp.csproj
+++ b/Samples/SimplestGitConsoleApp/SimplestGitConsoleApp.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <DockerfileContext>..\..</DockerfileContext>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
 
     <Import Project="..\..\Src\SimplestGitSourceGenerator\build\SimplestGitSourceGenerator.targets" />
