--- a/Tests/SimplestGitSourceGenerator.Tests/SimplestGitSourceGenerator.Tests.csproj
+++ b/Tests/SimplestGitSourceGenerator.Tests/SimplestGitSourceGenerator.Tests.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
